--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
 <head>
 <meta name="renderer" content="webkit" /> 
 <title>crazy bird</title>
-<link href="./css/style.css" rel="stylesheet" type="text/css" />
+<style>
+body{
+	padding:0;
+	margin:0;
+	border:none;
+	overflow-x:hidden;
+	overflow-y:hidden;
+}
+
+html {
+overflow-x:hidden;
+overflow-y:hidden;
+}
+
+.container {
+	width:320px;
+	height:568px;
+	position:absolute;
+	top:50%;
+	left:50%;
+	margin-left:-160px;
+	margin-top:-284px;
+}
+</style>
 </head>
 <body>
 
