--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ overflow-y:hidden;
 		<canvas id="main" width="320" height="480" ></canvas>
 	</div>
 
-<script src="./js/game.js"></script>
+<!-- <script src="./js/game.js"></script> -->
+<script src="./dist/flappybird.js"></script>
 </body>
 </html>
