add sprite and rollup, rewrite

--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@ overflow-y:hidden;
 <body>
 
 	<div class="container">
-		<canvas id="main" width="320" height="480" ></canvas>
+		<canvas id="canvas" width="320" height="480" ></canvas>
 	</div>
 
 <!-- <script src="./js/game.js"></script> -->
 <script src="./dist/flappybird.js"></script>
+<script>
+FlappyBird();
+</script>
 </body>
 </html>
