--- a/index.html
+++ b/index.html
@@ -1,39 +1,23 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta name="renderer" content="webkit" /> 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="renderer" content="webkit" /> 
 <title>crazy bird</title>
 <style>
-body{
-	padding:0;
-	margin:0;
-	border:none;
-	overflow-x:hidden;
-	overflow-y:hidden;
+html, body {
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+	border: none;
+	overflow: hidden;
 }
 
-html {
-overflow-x:hidden;
-overflow-y:hidden;
-}
-
-.container {
-	width:320px;
-	height:568px;
-	position:absolute;
-	top:50%;
-	left:50%;
-	margin-left:-160px;
-	margin-top:-284px;
-}
 </style>
 </head>
 <body>
-
-	<div class="container">
-		<canvas id="canvas" width="320" height="480" ></canvas>
-	</div>
-
+	<canvas id="canvas"></canvas>
 <!-- <script src="./js/game.js"></script> -->
 <script src="./dist/flappybird.js"></script>
 <script>
