--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="renderer" content="webkit" /> 
-<title>crazy bird</title>
+<title>Flappy Bird</title>
 <style>
 html, body {
 	width: 100%;
@@ -18,7 +18,6 @@ html, body {
 </head>
 <body>
 	<canvas id="canvas"></canvas>
-<!-- <script src="./js/game.js"></script> -->
 <script src="./dist/flappybird.js"></script>
 <script>
 FlappyBird();
